// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreHeader snapshots renders correctly when user is logged in with cart items 1`] = `
<header
  class="header"
  style="display: grid; grid-template-columns: 1fr auto 1fr;"
>
  <div
    style="display: flex; align-items: center;"
  />
  <div
    style="display: flex; align-items: center; justify-content: center; margin-right: 16px;"
  >
    <h1
      style="font-family: var(--font-cinzel), Cinzel, Georgia, serif; font-size: 22px; font-weight: 900; color: rgb(242, 168, 0); letter-spacing: 5px; text-shadow: 0 0 24px rgba(242,168,0,0.4);"
    >
      FUMÊGO
    </h1>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: flex-end; gap: 14px;"
  >
    <button
      aria-label="Ver carrinho (3 itens)"
      style="background: none; color: rgb(255, 255, 255); cursor: pointer; position: relative; padding: 4px;"
    >
      <span
        data-color="#F2A800"
        data-size="22"
        data-testid="icon-shopping-cart"
      />
      <span
        style="position: absolute; top: -4px; right: -6px; background: rgb(224, 64, 64); color: rgb(255, 255, 255); font-size: 9px; font-weight: 800; width: 17px; height: 17px; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 1.5px solid #080600;"
      >
        3
      </span>
    </button>
    <div
      style="position: relative;"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="Menu do usuário — Maria"
        style="width: 32px; height: 32px; border-radius: 50%; color: rgb(8, 6, 0); font-weight: 800; font-size: 14px; cursor: pointer; box-shadow: 0 0 12px rgba(242,168,0,0.35); transition: box-shadow 0.15s;"
      >
        M
      </button>
    </div>
  </div>
</header>
`;

exports[`StoreHeader snapshots renders correctly when user is logged out and cart is empty 1`] = `
<header
  class="header"
  style="display: grid; grid-template-columns: 1fr auto 1fr;"
>
  <div
    style="display: flex; align-items: center;"
  />
  <div
    style="display: flex; align-items: center; justify-content: center; margin-right: 16px;"
  >
    <h1
      style="font-family: var(--font-cinzel), Cinzel, Georgia, serif; font-size: 22px; font-weight: 900; color: rgb(242, 168, 0); letter-spacing: 5px; text-shadow: 0 0 24px rgba(242,168,0,0.4);"
    >
      FUMÊGO
    </h1>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: flex-end; gap: 14px;"
  >
    <button
      aria-label="Ver carrinho"
      style="background: none; color: rgb(255, 255, 255); cursor: pointer; position: relative; padding: 4px;"
    >
      <span
        data-color="#888"
        data-size="22"
        data-testid="icon-shopping-cart"
      />
    </button>
    <button
      aria-label="Entrar na conta"
      style="background: none; cursor: pointer; padding: 4px;"
    >
      <span
        data-color="#7A6040"
        data-size="22"
        data-testid="icon-user"
      />
    </button>
  </div>
</header>
`;

exports[`StoreHeader snapshots renders logo when logoUrl is provided 1`] = `
<header
  class="header"
  style="display: grid; grid-template-columns: 1fr auto 1fr;"
>
  <div
    style="display: flex; align-items: center;"
  >
    <img
      alt="Logo"
      src="https://example.com/logo.png"
      style="height: 60px; object-fit: contain; display: block;"
    />
  </div>
  <div
    style="display: flex; align-items: center; justify-content: center; margin-right: 16px;"
  >
    <h1
      style="font-family: var(--font-cinzel), Cinzel, Georgia, serif; font-size: 22px; font-weight: 900; color: rgb(242, 168, 0); letter-spacing: 5px; text-shadow: 0 0 24px rgba(242,168,0,0.4);"
    >
      FUMÊGO
    </h1>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: flex-end; gap: 14px;"
  >
    <button
      aria-label="Ver carrinho"
      style="background: none; color: rgb(255, 255, 255); cursor: pointer; position: relative; padding: 4px;"
    >
      <span
        data-color="#888"
        data-size="22"
        data-testid="icon-shopping-cart"
      />
    </button>
    <button
      aria-label="Entrar na conta"
      style="background: none; cursor: pointer; padding: 4px;"
    >
      <span
        data-color="#7A6040"
        data-size="22"
        data-testid="icon-user"
      />
    </button>
  </div>
</header>
`;

exports[`StoreHeader snapshots renders user menu when showUserMenu is true 1`] = `
<header
  class="header"
  style="display: grid; grid-template-columns: 1fr auto 1fr;"
>
  <div
    style="display: flex; align-items: center;"
  />
  <div
    style="display: flex; align-items: center; justify-content: center; margin-right: 16px;"
  >
    <h1
      style="font-family: var(--font-cinzel), Cinzel, Georgia, serif; font-size: 22px; font-weight: 900; color: rgb(242, 168, 0); letter-spacing: 5px; text-shadow: 0 0 24px rgba(242,168,0,0.4);"
    >
      FUMÊGO
    </h1>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: flex-end; gap: 14px;"
  >
    <button
      aria-label="Ver carrinho (3 itens)"
      style="background: none; color: rgb(255, 255, 255); cursor: pointer; position: relative; padding: 4px;"
    >
      <span
        data-color="#F2A800"
        data-size="22"
        data-testid="icon-shopping-cart"
      />
      <span
        style="position: absolute; top: -4px; right: -6px; background: rgb(224, 64, 64); color: rgb(255, 255, 255); font-size: 9px; font-weight: 800; width: 17px; height: 17px; border-radius: 50%; display: flex; align-items: center; justify-content: center; border: 1.5px solid #080600;"
      >
        3
      </span>
    </button>
    <div
      style="position: relative;"
    >
      <button
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="Fechar menu do usuário"
        style="width: 32px; height: 32px; border-radius: 50%; color: rgb(8, 6, 0); font-weight: 800; font-size: 14px; cursor: pointer; box-shadow: 0 0 0 2px #F2A800; transition: box-shadow 0.15s;"
      >
        M
      </button>
      <div
        style="position: absolute; top: 42px; right: 0px; background: rgb(26, 20, 0); border: 1px solid #2c1e00; border-radius: 14px; padding: 6px 0px; min-width: 210px; z-index: 200; box-shadow: 0 12px 40px rgba(0,0,0,0.7); animation: fadeIn 0.15s ease-out;"
      >
        <div
          style="padding: 10px 16px; border-bottom: 1px solid #2C1E00;"
        >
          <p
            style="font-size: 13px; font-weight: 700; color: rgb(255, 255, 255);"
          >
            Maria
          </p>
          <p
            style="font-size: 11px; color: rgb(122, 96, 64); margin-top: 2px;"
          >
            maria@example.com
          </p>
        </div>
        <button
          style="display: flex; align-items: center; gap: 10px; width: 100%; text-align: left; padding: 11px 16px; background: none; color: rgb(255, 255, 255); font-size: 14px; cursor: pointer; font-family: inherit;"
        >
          <span
            style="color: rgb(122, 96, 64);"
          >
            <span
              data-size="15"
              data-testid="icon-wallet"
            />
          </span>
          <span
            style="flex: 1;"
          >
            Minha Carteira
          </span>
          <span
            style="font-size: 11px; font-weight: 700; color: rgb(242, 168, 0); background: rgba(242, 168, 0, 0.12); border-radius: 8px; padding: 2px 7px; border: 1px solid #f2a80044;"
          >
            R$ 12,50
          </span>
        </button>
        <button
          style="display: flex; align-items: center; gap: 10px; width: 100%; text-align: left; padding: 11px 16px; background: none; color: rgb(255, 255, 255); font-size: 14px; cursor: pointer; font-family: inherit;"
        >
          <span
            style="color: rgb(122, 96, 64);"
          >
            <span
              data-size="15"
              data-testid="icon-settings"
            />
          </span>
          <span
            style="flex: 1;"
          >
            Configurações da conta
          </span>
        </button>
        <button
          style="display: flex; align-items: center; gap: 10px; width: 100%; text-align: left; padding: 11px 16px; background: none; color: rgb(255, 255, 255); font-size: 14px; cursor: pointer; font-family: inherit;"
        >
          <span
            style="color: rgb(122, 96, 64);"
          >
            <span
              data-size="15"
              data-testid="icon-package"
            />
          </span>
          <span
            style="flex: 1;"
          >
            Ver meus pedidos
          </span>
        </button>
        <div
          style="height: 1px; background: rgb(44, 30, 0); margin: 4px 0px;"
        />
        <button
          style="display: flex; align-items: center; gap: 10px; width: 100%; text-align: left; padding: 11px 16px; background: none; color: rgb(224, 64, 64); font-size: 14px; cursor: pointer; font-family: inherit;"
        >
          <span
            data-size="15"
            data-testid="icon-log-out"
          />
          Sair da conta
        </button>
      </div>
    </div>
  </div>
</header>
`;
